[package]
name = "cancel-repro"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
async-bb8-diesel = { git = "https://github.com/oxidecomputer/async-bb8-diesel", rev = "be3d9bce50051d8c0e0c06078e8066cc27db3001" }
bb8 = "0.8.1"
diesel = { version = "2.1.0", features = ["postgres"] }
# This needs to be a version of Dropshot that predates dropshot#701.  After that
# fix, endpoint handlers are never cancelled.
dropshot = "0.9.0"
http = "0.2.9"
slog = "2.7.0"
tokio = { version = "1.28.2", features = ["full"] }
